adjustment for extra long file name

--- a/magda-web-client/src/Components/Common/FileIcon.scss
+++ b/magda-web-client/src/Components/Common/FileIcon.scss
@@ -2,7 +2,8 @@
 
 .file-icon-svg path,
 .file-icon-svg rect {
-    fill: $AU-color-foreground-action;
+    //fill: $AU-color-foreground-action;
+    fill: #320d3b;
 }
 
 .file-icon-svg text {
