--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddPage.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddPage.scss
@@ -99,6 +99,7 @@
     .choice-1 {
         .choice-Icon {
             width: 54px;
+            height: 58px;
         }
         .choice-buttonHeading {
             margin-left: 8px;
@@ -111,7 +112,7 @@
     .choice-2 {
         .choice-Icon {
             width: 76px;
-            height: 52px;
+            height: 54px;
         }
         .choice-buttonHeading {
             margin-left: 8px;
@@ -123,7 +124,8 @@
 
     .choice-3 {
         .choice-Icon {
-            width: 75px;
+            width: 65px;
+            height: 39px;
         }
         .choice-buttonHeading {
             margin-left: 8px;
@@ -132,7 +134,8 @@
 
     .choice-4 {
         .choice-Icon {
-            width: 82px;
+            width: initial;
+            height: 67px;
         }
         .choice-buttonHeading {
             margin-left: 1px;
