--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddFilesPage.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddFilesPage.scss
@@ -45,6 +45,12 @@
         cursor: pointer;
         background-image: url("../../../assets/upload-section.svg");
         background-repeat: no-repeat;
+        .filedrop-zone-button.au-btn {
+            background: none;
+            border: none;
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .dataset-add-files-dropTarget {
