applied hidden border to delete & edit button so they won't jumping when hover over

--- a/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
@@ -139,6 +139,12 @@
         padding: 1px 0px 0px 0px;
     }
 
+    .dataset-file-edit-button,
+    .dataset-file-delete-button {
+        border: 1px solid transparent;
+        border-radius: 4px;
+    }
+
     .dataset-file-edit-button:hover,
     .dataset-file-delete-button:hover {
         border: 1px solid #c0bebe;
