use dataset page icon for progress bar

--- a/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
@@ -30,6 +30,7 @@
         .file-icon-area {
             float: left;
             margin-right: 57px;
+            margin-top: 5px;
             .format-icon {
                 width: 48px;
             }
