make suggestion dropdown item background darker when hover

--- a/magda-web-client/src/Components/Editing/VocabularyAutoCompleteInput.scss
+++ b/magda-web-client/src/Components/Editing/VocabularyAutoCompleteInput.scss
@@ -6,9 +6,10 @@
         padding: 0.5em;
         margin-bottom: 4px;
         background-color: #ffffff;
+        cursor: pointer;
     }
     .suggestion-item:hover {
-        background-color: #f7f7f7;
+        background-color: #e7e7e7;
     }
     .suggestions-list {
         list-style-type: none;
