--- a/magda-web-client/src/Components/Dataset/Add/AccrualPeriodicityInput/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/AccrualPeriodicityInput/index.scss
@@ -1,11 +1,11 @@
 .accrual-periodicity-input-container {
     .accrual-periodicity-select {
-        float: left;
         margin-right: 20px;
     }
     .custom-recurrence-input {
-        float: left;
+        margin-top: 20px;
         width: 360px;
+        padding-top: 1px;
         padding-bottom: 33px;
         border-radius: 2px;
         box-shadow: 0 0 0 1px hsla(0, 0%, 0%, 0.1),
@@ -15,7 +15,7 @@
             border-bottom: solid 1px #cccaca;
             h1 {
                 margin-left: 25px;
-                margin-top: 22px;
+                margin-top: 15px;
                 margin-bottom: 16px;
                 font-size: 16px;
                 font-weight: 500;
