CoordinatesPanel: data linked with Region panel

--- a/magda-web-client/src/Components/Dataset/Add/SpatialAreaInput/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/SpatialAreaInput/index.scss
@@ -165,5 +165,8 @@
                 }
             }
         }
+        .spatial-data-previewer-container {
+            padding-top: 30px;
+        }
     }
 }
