--- a/magda-web-client/src/Components/Editing/Style.scss
+++ b/magda-web-client/src/Components/Editing/Style.scss
@@ -18,6 +18,13 @@
     }
     input {
         padding-right: 43px;
+        font-size: 15px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.33;
+        letter-spacing: normal;
+        color: #484848;
     }
 }
 
@@ -42,6 +49,13 @@
         border: solid 1px #cccaca;
         display: inline !important;
         padding-right: 35px;
+        font-size: 15px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.33;
+        letter-spacing: normal;
+        color: #636363;
     }
 }
 
