Added pencil icons to Orgnastion / Contact Input Box

--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -43,5 +43,16 @@
         line-height: 1.6;
         letter-spacing: normal;
         color: #979797;
+        padding-right: 50px;
+    }
+
+    .org-auto-complete-input-outer-container {
+        position: relative;
+        .edit-icon {
+            position: absolute;
+            left: 445px;
+            top: 10px;
+            z-index: 1;
+        }
     }
 }
