--- a/magda-web-client/src/Components/Editing/Style.scss
+++ b/magda-web-client/src/Components/Editing/Style.scss
@@ -48,6 +48,9 @@
         border: solid 1px #cccaca;
         display: inline !important;
         padding-right: 35px;
+        padding-left: 27px;
+        padding-top: 12px;
+        padding-bottom: 12px;
         font-size: 15px;
         font-weight: 300;
         font-style: normal;
