adjusted save & next button layout

--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -32,6 +32,11 @@
         color: #30384d !important;
     }
 
+    .next-save-button-row {
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+
     .org-auto-complete-input,
     .contact-editor-input {
         border-radius: 8px;
