replace submit page description box with additional notes box

--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddMetadataPage.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddMetadataPage.scss
@@ -167,4 +167,30 @@
             margin-bottom: 50px;
         }
     }
+
+    .dataset-submit-page {
+        h2 {
+            font-size: 38px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 0.79;
+            letter-spacing: normal;
+            color: #30384d;
+            padding-bottom: 39px;
+            border-bottom: solid 1px #cccaca;
+        }
+
+        h3 {
+            font-size: 16px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.25;
+            letter-spacing: normal;
+            color: #484848;
+            margin-top: 39px;
+            margin-bottom: 26px;
+        }
+    }
 }
