--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -60,4 +60,19 @@
             z-index: 1;
         }
     }
+
+    .tooltip-root {
+        font-size: 14px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.57;
+        letter-spacing: normal;
+        color: #636363;
+        max-width: 978px;
+        margin-bottom: 32px;
+        img {
+            margin-right: 10px;
+        }
+    }
 }
