adjust select style on add data page

--- a/magda-web-client/src/Components/Editing/Editors/multiItem.scss
+++ b/magda-web-client/src/Components/Editing/Editors/multiItem.scss
@@ -34,3 +34,12 @@
         margin: 0px;
     }
 }
+
+.list-multi-item-editor-container {
+    .au-btn {
+        border-radius: 10px;
+        border: solid 2px #30384d;
+        background-color: #30384d !important;
+        margin-left: 20px;
+    }
+}
