--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -75,4 +75,9 @@
             margin-right: 10px;
         }
     }
+
+    .au-select {
+        border-radius: 2px;
+        border: solid 1px #979797;
+    }
 }
