adjust tooltip layout on add file page

--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -70,7 +70,8 @@
         letter-spacing: normal;
         color: #636363;
         max-width: 978px;
-        margin-bottom: 32px;
+        margin-top: 16px;
+        margin-bottom: 24px;
         img {
             margin-right: 10px;
         }
