--- a/magda-web-client/src/Components/Dataset/Add/ReviewFilesList.scss
+++ b/magda-web-client/src/Components/Dataset/Add/ReviewFilesList.scss
@@ -6,7 +6,7 @@
     top: 10px;
 }
 .review-files-list-container {
-    width: 275px;
+    width: 295px;
     border-radius: 8px;
     border: solid 3px #413157;
     background-color: #ffffff;
@@ -55,11 +55,14 @@
             line-height: 1.47;
             letter-spacing: normal;
             color: #484848;
+            p:nth-child(2) {
+                margin-top: 16px;
+            }
         }
         .file-icons-container {
             padding-left: 15px;
             padding-right: 15px;
-            margin-top: 30px;
+            margin-top: 25px;
             font-size: 14px;
             font-weight: normal;
             font-style: normal;
@@ -78,6 +81,26 @@
                 img.file-icon {
                     width: 24px;
                 }
+            }
+        }
+        .show-more-button-container {
+            position: relative;
+            .show-more-button {
+                position: absolute;
+                right: 10px;
+                top: -12px;
+                border-radius: 5px;
+                border: solid 2px #30384d;
+                background-color: #30384d;
+                font-size: 12px;
+                padding: 5px;
+                font-weight: normal;
+                font-style: normal;
+                font-stretch: normal;
+                line-height: 1;
+                letter-spacing: normal;
+                text-align: center;
+                color: #ffffff;
             }
         }
     }
