added access location auto compete input

--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -37,6 +37,7 @@
         margin-bottom: 80px;
     }
 
+    .common-auto-complete-input,
     .org-auto-complete-input,
     .contact-editor-input {
         border-radius: 8px;
@@ -51,6 +52,7 @@
         padding-right: 50px;
     }
 
+    .common-auto-complete-input-outer-container,
     .org-auto-complete-input-outer-container {
         position: relative;
         .edit-icon {
