Adjusted style of the textarea to match the input

--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddMetadataPage.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddMetadataPage.scss
@@ -187,6 +187,10 @@
         .question-who-can-see-dataset {
             margin-bottom: 54px;
         }
+
+        .question-access-notes textarea {
+            padding-left: 16px !important;
+        }
     }
 
     .dataset-submit-page {
