adjust the spacing of the questions

--- a/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
@@ -30,9 +30,16 @@
 
         .question-access-notes textarea {
             padding-left: 16px !important;
+            margin-bottom: 50px;
+        }
+
+        .question-license-apply-type {
+            margin-bottom: 40px;
         }
 
         .question-license-restriction-type {
+            margin-bottom: 80px;
+
             .textEditorEx-outter-container {
                 margin-top: 20px;
                 width: 100%;
