adjusted the layout

--- a/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
@@ -38,7 +38,7 @@
         }
 
         .question-license-restriction-type {
-            margin-bottom: 80px;
+            margin-bottom: 36px;
 
             .textEditorEx-outter-container {
                 margin-top: 20px;
@@ -88,6 +88,13 @@
                     }
                 }
             }
+        }
+
+        .question-security-classification {
+            margin-bottom: 52px;
+        }
+
+        .question-security-classification {
         }
     }
 }
