make sure long filename awalys wrapped for file reviewer box

--- a/magda-web-client/src/Components/Dataset/Add/ReviewFilesList.scss
+++ b/magda-web-client/src/Components/Dataset/Add/ReviewFilesList.scss
@@ -81,6 +81,12 @@
                 img.file-icon {
                     width: 24px;
                 }
+                .file-title {
+                    width: 200px;
+                    overflow-wrap: anywhere;
+                    word-break: break-all;
+                    white-space: pre-wrap;
+                }
             }
         }
         .show-more-button-container {
