--- a/magda-web-client/src/Components/Static/StaticPage.scss
+++ b/magda-web-client/src/Components/Static/StaticPage.scss
@@ -22,7 +22,7 @@
         table,
         th,
         td {
-            border: 1px solid #e7e7e7;
+            border: 1px solid #cccaca;
         }
 
         td,
