--- a/magda-web-client/src/Components/Common/AddDatasetProgressMeter.scss
+++ b/magda-web-client/src/Components/Common/AddDatasetProgressMeter.scss
@@ -59,7 +59,8 @@
 
     .past-item {
         color: #4b2a85;
-        cursor: pointer;
+        text-decoration: none;
+
         .round-number-icon {
             background-color: #4b2a85;
         }
