Added Superceded logic

--- a/magda-web-client/src/Components/Dataset/Add/Pages/DetailsAndContents/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/Pages/DetailsAndContents/index.scss
@@ -92,5 +92,17 @@
         .question-time-period {
             margin-bottom: 50px;
         }
+
+        .question-dataset-status {
+            margin-bottom: 50px;
+        }
+
+        .question-dataset-superseded-by {
+            margin-bottom: 50px;
+        }
+
+        .question-dataset-retire-reason {
+            margin-bottom: 50px;
+        }
     }
 }
