Fixed edit file panel text input layout

--- a/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
@@ -175,4 +175,8 @@
         border-radius: 5px;
         border: none;
     }
+
+    div.textEditorEx-outter-container {
+        display: inline;
+    }
 }
