adjust chunk processing logic

--- a/magda-web-client/src/Components/Common/DataPreviewVis.scss
+++ b/magda-web-client/src/Components/Common/DataPreviewVis.scss
@@ -68,4 +68,9 @@
             }
         }
     }
+    .partial-data-message {
+        color: #313131;
+        font-size: 1rem;
+        margin-top: 10px;
+    }
 }
