--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -1,4 +1,4 @@
-$AU-color-foreground-action: #ff0000;
+$AU-color-foreground-action: "#ff0000";
 $AU-color-foreground-focus: #0e0021;
 $AU-color-foreground-text: #0e0021;
 $AU-color-background: #ffffff;
