--- a/magda-web-client/src/Components/Common/Choice.scss
+++ b/magda-web-client/src/Components/Common/Choice.scss
@@ -50,3 +50,12 @@
     border: none !important;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+.choice-Disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+
+    a {
+        cursor: not-allowed;
+    }
+}
