--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,6 +31,15 @@
                 <a href="https://pages.github.com">GitHub Pages</a>.</span>
         </footer>
     </main>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92539508-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'UA-92539508-3');
+    </script>
 </body>
 
 </html>
