Add new color for preview

--- a/magda-web-client/src/Components/Common/Spinner.scss
+++ b/magda-web-client/src/Components/Common/Spinner.scss
@@ -43,7 +43,7 @@
 .spinner_container {
     display: flex;
     align-items: center;
-    background-color: $AU-color-background;
+    background-color: $AU-color-preview;
 }
 
 .sk-cube-grid {
