--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -9,7 +9,8 @@ $magda-color-dark: darken($magda-color-primary, 15%);
 $AU-color-foreground-action: $magda-color-light;
 $AU-color-foreground-focus: $magda-color-dark;
 $AU-color-foreground-text: $magda-color-dark;
-$AU-color-background: #f5f5f5;
+$AU-color-background: #ffffff;
+$AU-color-preview: #f5f5f5;
 
 $AU-colordark-foreground-action: #f7f7f7;
 $AU-colordark-foreground-focus: $magda-color-secondary;
