Use purple tooltip in the first issued field

--- a/magda-web-client/src/Components/Dataset/Add/Pages/DetailsAndContents/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/Pages/DetailsAndContents/index.scss
@@ -67,6 +67,10 @@
                 color: #484848;
                 position: relative;
             }
+            .inner {
+                width: 400px;
+                left: 15px;
+            }
         }
 
         .question-recent-modify-date {
