Use a tooltip to describe names

--- a/magda-web-client/src/Components/Dataset/Add/Pages/DetailsAndContents/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/Pages/DetailsAndContents/index.scss
@@ -36,6 +36,10 @@
 
         .question-title {
             margin-bottom: 58px;
+            .inner {
+                width: 400px;
+                left: -135px;
+            }
         }
 
         .question-language {
