Add mouse-over purple tooltip to explain sizes; closes #2558

--- a/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
@@ -96,6 +96,22 @@
             }
         }
     }
+    .tooltip-container {
+        position: relative;
+        .tooltip {
+            position: absolute;
+            padding-left: 4px;
+            top: -4px;
+        }
+        .inner {
+            a:hover {
+                color: #fff;
+            }
+            width: 200px;
+            text-align: left;
+            left: 15px;
+        }
+    }
 }
 .complete-processing.dataset-file-root {
     background-image: url("../../../assets/purple-box.svg");
